--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"><p id="counter"></p></div>
+    <div class="container">
+      <p id="counter"></p>
+    </div>
 
     <script src="script.js"></script>
   </body>
